--- a/example.env
+++ b/example.env
@@ -7,3 +7,4 @@ MIGRATION_DB_USER=thingful
 MIGRATION_DB_PASS=
 DB_URL="postgresql://thingful@localhost/thingful"
 TEST_DB_URL="postgresql://thingful@localhost/thingful-test"
+JWT_SECRET='The terrible secret of space'
